--- a/esmvaltool/recipes/recipe_anav13jclim.yml
+++ b/esmvaltool/recipes/recipe_anav13jclim.yml
@@ -553,7 +553,8 @@ diagnostics:
           - {dataset: IPSL-CM5A-MR}
           - {dataset: IPSL-CM5B-LR}
           - {dataset: MIROC-ESM}
-          - {dataset: MIROC-ESM-CHEM}
+          # Shape of fx files and fgco2 differ on mistral
+          # - {dataset: MIROC-ESM-CHEM}
           - {dataset: MPI-ESM-LR}
           - {dataset: MPI-ESM-MR}
           - {dataset: NorESM1-ME}
