--- a/esmvaltool/recipes/recipe_flato13ipcc.yml
+++ b/esmvaltool/recipes/recipe_flato13ipcc.yml
@@ -771,7 +771,8 @@ diagnostics:
           # Overlapping files for several variables at mistral
           # - {dataset: IPSL-CM5B-LR}
           - {dataset: MIROC-ESM}
-          - {dataset: MIROC-ESM-CHEM}
+          # Shape of fx files and fgco2 differ on mistral
+          # - {dataset: MIROC-ESM-CHEM}
           - {dataset: MPI-ESM-LR}
           - {dataset: MPI-ESM-MR}
           - {dataset: NorESM1-ME}
