--- a/esmvaltool/recipes/examples/recipe_preprocessor_test.yml
+++ b/esmvaltool/recipes/examples/recipe_preprocessor_test.yml
@@ -59,7 +59,11 @@ preprocessors:
     extract_levels:
       levels: [2000, 7000]
       scheme: nearest
-    regrid: false
+    regrid:
+      target_grid: 2x2
+      lon_offset: false
+      lat_offset: false
+      scheme: nearest
     mask_fillvalues: false
     multi_model_statistics: false
 
