--- a/esmvaltool/recipes/recipe_flato13ipcc.yml
+++ b/esmvaltool/recipes/recipe_flato13ipcc.yml
@@ -720,8 +720,8 @@ diagnostics:
           - {dataset: IPSL-CM5A-LR}
           - {dataset: IPSL-CM5A-MR}
           - {dataset: IPSL-CM5B-LR}
-          - {dataset: MIROC-ESM}
           # Shape of fx files and fgco2 differ on mistral
+          # - {dataset: MIROC-ESM}
           # - {dataset: MIROC-ESM-CHEM}
           - {dataset: MPI-ESM-LR}
           - {dataset: MPI-ESM-MR}
