Added provenance outputs to diag_cdd.py, diag_spei.r, diag_spi.r, diag_shapeselect.py; Added description to recipe_consecdrydays.yml, recipe_shapeselect_py.yml, recipe_spei.yml; added used and references to config-references.yml

--- a/esmvaltool/recipes/recipe_consecdrydays.yml
+++ b/esmvaltool/recipes/recipe_consecdrydays.yml
@@ -1,4 +1,9 @@
 ---
+documentation:
+  description: 'Consecutive dry days'
+  authors: ['berg_pe']
+  projects: ['c3s-magic']
+  references: ['acknow_project']
 
 datasets:
    - {dataset: bcc-csm1-1-m,  project: CMIP5,  mip: day,  exp: historical,  ensemble: r1i1p1,  start_year: 2001,  end_year: 2002}
