--- a/esmvaltool/config-user.yml
+++ b/esmvaltool/config-user.yml
@@ -36,9 +36,9 @@ profile_diagnostic: false
 
 # Rootpaths to the data from different projects (lists are also possible)
 rootpath:
-  CMIP5: [~/cmip5_inputpath1, ~/cmip5_inputpath2]
-  OBS: ~/obs_inputpath
-  default: ~/default_inputpath
+  CMIP5: ../esmvaltool_input/
+  OBS: ../esmvaltool_input/
+  default: ../esmvaltool_input/
 
 # Directory structure for input data: [default]/BADC/DKRZ/ETHZ/etc
 # See config-developer.yml for definitions.
