add themes and realms tag to ncl example recipe

--- a/esmvaltool/recipes/examples/recipe_ncl.yml
+++ b/esmvaltool/recipes/examples/recipe_ncl.yml
@@ -35,6 +35,10 @@ preprocessors:
 diagnostics:
   example:
     description: Example diagnostic
+    themes:
+      - phys
+    realms:
+      - atmos
     variables:
       ta:
         preprocessor: preprocessor_1
