--- a/meta.yaml
+++ b/meta.yaml
@@ -64,7 +64,7 @@ requirements:
     - ncurses=6.1=hfc679d8_1
     - r-base
     - r-rcpp 
-    - cdo
+    - cdo=1.9.3
     # TODO: add julia
 test:
   # TODO: add unit tests? This seems to require installing the tests
