--- a/esmvaltool/utils/testing/recipe_settings/install.sh.template
+++ b/esmvaltool/utils/testing/recipe_settings/install.sh.template
@@ -12,6 +12,8 @@ module load contrib/gnu/gcc/8.2.0
 wget -nv https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
 bash Miniconda3-latest-Linux-x86_64.sh -b -p conda
 . conda/etc/profile.d/conda.sh
+conda activate base
+conda update -y conda
 git clone --depth 1 --branch {branch} https://github.com/ESMValGroup/ESMValTool
 cd ESMValTool
 # TODO: add option to merge with development branch
