--- a/esmvaltool/recipes/examples/recipe_python.yml
+++ b/esmvaltool/recipes/examples/recipe_python.yml
@@ -27,15 +27,11 @@ datasets:
 preprocessors:
 
   preprocessor1:
-    extract_levels:
-      levels: 85000
-      scheme: nearest
     regrid:
-      target_grid: reference_dataset
-      scheme: linear
-    multi_model_statistics:
-      span: overlap
-      statistics: [mean, median]
+      target_grid: 2.5x2.5
+      lon_offset: False
+      lat_offset: False
+      scheme: linear_extrapolate
 
 diagnostics:
 
@@ -46,11 +42,8 @@ diagnostics:
     realms:
       - atmos
     variables:
-      ta:
-        preprocessor: preprocessor1
-        field: T3M
-        reference_dataset: CanESM2
       pr:
+        preprocessor: preprocessor1
         field: T2Ms
         reference_dataset: MPI-ESM-LR
     scripts:
