--- a/esmvaltool/recipes/recipe_ensclus.yml
+++ b/esmvaltool/recipes/recipe_ensclus.yml
@@ -31,33 +31,33 @@ datasets:
   - {dataset: CESM1-FASTCHEM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: CESM1-WACCM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: CMCC-CESM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: CMCC-CM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: CMCC-CM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: CMCC-CMS,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: CNRM-CM5,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: CSIRO-Mk3-6-0,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: EC-EARTH,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: EC-EARTH,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: FGOALS-g2,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: FGOALS-s2,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: FGOALS-s2,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: FIO-ESM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: GFDL-CM2p1,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: GFDL-CM3,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: GFDL-ESM2G,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: GFDL-ESM2M,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: HadCM3,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: HadGEM2-AO,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: HadGEM2-AO,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: HadGEM2-CC,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: HadGEM2-ES,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: inmcm4,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: IPSL-CM5A-LR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: IPSL-CM5A-MR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: IPSL-CM5B-LR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: MIROC5,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: MIROC-ESM-CHEM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: MIROC-ESM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: MIROC5,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: MIROC-ESM-CHEM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: MIROC-ESM,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: MPI-ESM-LR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: MPI-ESM-MR,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: MPI-ESM-P,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
-  - {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
+ #- {dataset: MRI-CGCM3,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: NorESM1-ME,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
   - {dataset: NorESM1-M,  project: CMIP5,  mip: Amon,  exp: historical,  ensemble: r1i1p1,  start_year: 1900,  end_year: 2005}
 
@@ -67,7 +67,7 @@ preprocessors:
     extract_levels: false
     regrid:
       target_grid: 2.5x2.5
-      scheme: linear
+      scheme: linear_extrapolate
 
 
 diagnostics:
