--- a/esmvaltool/recipes/recipe_miles_regimes.yml
+++ b/esmvaltool/recipes/recipe_miles_regimes.yml
@@ -54,7 +54,8 @@ preprocessors:
         scheme: nearest
       regrid:
         target_grid: 2.5x2.5
-        scheme: area_weighted
+        lat_offset: False
+        scheme: linear_extrapolate
       extract_region:
         start_longitude: 0.
         end_longitude: 360.
