--- a/esmvaltool/recipes/recipe_miles_block.yml
+++ b/esmvaltool/recipes/recipe_miles_block.yml
@@ -70,7 +70,7 @@ diagnostics:
       zg:
         preprocessor: preproc1
         mip: day
-        field: T2Ds
+        field: T3D
         reference_dataset: "ERA-Interim"
     scripts:
         miles_block: 
